Bug 233490 - Status bar messages in seperate window wrong
Summary: Status bar messages in seperate window wrong
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-04-06 14:43 UTC by Thomas McGuire
Modified: 2010-04-13 06:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-06 14:43:57 UTC
When using the seperate window in KMail to display a message, the URLHandlerManager is apparently not used for the status bar message.

That means the seperate window's status bar will display raw URLs like "kmail:hideAttachmentQuicklist", instead of the prettified text.
Comment 1 Thomas McGuire 2010-04-13 06:46:06 UTC
SVN commit 1114224 by tmcguire:

Fix status bar message in the seperate reader win.

It was connected directly to the WebKit HTML widget, which were not
resolved by URLHandlerManager.
Remove access to the HTML widget and provide signals for the status bar
message.

BUG: 233490

 M  +2 -2      kmail/kmreadermainwin.cpp  
 M  +2 -6      kmail/kmreaderwin.cpp  
 M  +2 -5      kmail/kmreaderwin.h  
 M  +2 -6      messageviewer/viewer.cpp  
 M  +6 -3      messageviewer/viewer.h  
 M  +2 -0      messageviewer/viewer_p.cpp  
 M  +2 -0      messageviewer/viewer_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1114224