Fix status bar message in the seperate reader win.

It was connected directly to the WebKit HTML widget, which were not
resolved by URLHandlerManager.
Remove access to the HTML widget and provide signals for the status bar
message.

BUG: 233490

svn path=/trunk/KDE/kdepim/kmail/; revision=1114224